@@ -234,7 +234,10 @@ class XOM:
     def keyfs(self):
         from devpi_server.keyfs import KeyFS
         from devpi_server.model import add_keys
-        keyfs = KeyFS(self.config.serverdir, readonly=self.is_replica())
+        keyfs = KeyFS(
+            self.config.serverdir,
+            readonly=self.is_replica(),
+            cache_size=self.config.args.keyfs_cache_size)
         add_keys(self, keyfs)
         self.thread_pool.register(keyfs.notifier)
         return keyfs
